crates/pg_syntax/tests/snapshots/postgres_regress/int8@22.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT * FROM INT8_TBL WHERE 123 <> q1;
---
SelectStmt@0..39
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..22
    Ident@14..22 "INT8_TBL"
  Whitespace@22..23 " "
  Where@23..28 "WHERE"
  Whitespace@28..29 " "
  AExpr@29..38
    AConst@29..32
      Iconst@29..32 "123"
    Whitespace@32..33 " "
    NotEquals@33..35 "<>"
    Whitespace@35..36 " "
    ColumnRef@36..38
      Ident@36..38 "q1"
  Ascii59@38..39 ";"

